<resources>
    <string name="app_name">KurlyGit</string>

    <string name="main_search_word">Search..</string>
    <string name="main_search_result">검색 결과 :</string>
    <string name="main_search_result_cnt">%1$d 개</string>
    <string name="main_search_result_cnt_wait">0 개</string>
    <string name="main_search_btn">검색</string>

    <string name="viewholder_title_received">%1$s</string>
    <string name="viewholder_title_wait">제목 없음</string>
    <string name="viewholder_subtitle_received">%1$s</string>
    <string name="viewholder_subtitle_wait">부제 없음</string>
    <string name="viewholder_star_received">Star : %1$d 개</string>
    <string name="viewholder_star_wait">Star : 0 개</string>
    <string name="viewholder_fork_received">Fork : %1$d 개</string>
    <string name="viewholder_fork_wait">Fork : 0 개</string>
    <string name="viewholder_private_received_false">Publish</string>
    <string name="viewholder_private_received_true">Private</string>
    <string name="viewholder_private_wait">정보 없음</string>

    <string name="main_search_no_result">검색 결과가 없습니다.</string>

</resources>